# wagtail_folioblog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: build.yaml  coverage.yaml  dockerhub.yaml  lint.yaml  npm.yaml  poetry.yaml  precommit.yaml  selenium.yaml  units.yaml  version.yaml
deploy/: README.md  deploy.conf.sh.DIST  deploy.sh
docker/dev/: .env.dev  Dockerfile  entrypoint.sh
docker/prod/: .env.prod  Dockerfile  entrypoint.sh  gunicorn.py  local.py
docker/prod/nginx/ssl/: csr.conf
docker/prod/nginx/templates/: 1-upstream.conf.template  2-folioblog-http.conf.template  3-folioblog-https.conf.template
env/: .env.DEV  .env.LOCAL  .env.PROD
folioblog/: urls.py  wsgi.py
folioblog/blog/: factories.py  models.py  views.py  wagtail_hooks.py
folioblog/blog/fixtures/: blogcategories.json  blogindex.json  blogpagerelatedlinks.json  blogpages.json  blogpagetags.json  blogpromote.json  blogpromotelink.json  blogtags.json
folioblog/blog/migrations/: 0001_initial.py  0002_dummytranslatable.py  0003_bootstraptranslatable.py  0004_translatable.py  0005_image_alt.py  0006_alter_blogcategory_unique_together_blogcategory_site_and_more.py  0007_alter_blogpagerelatedlink_related_page_and_more.py  0008_blogpage_author.py  0009_alter_blogpage_date.py
folioblog/blog/templates/blog/: blog_index_item.html  blog_index_page.html  blog_page.html  image_switch.html
folioblog/blog/templatetags/: blog.py
folioblog/blog/tests/selenium/: test_blog_index.py  test_blog_page.py
folioblog/blog/tests/units/: test_api.py  test_blog_admin.py  test_blog_index.py  test_blog_page.py  test_factories.py  test_models.py
folioblog/core/: apps.py  blocks.py  compressor.py  context_processors.py  image_formats.py  managers.py  middleware.py  models.py  pagination.py  signals.py  sitemap.py  trans.py  views.py  wagtail_hooks.py
folioblog/core/factories/: __init__.py  blocks.py  core.py  images.py  pages.py  snippets.py  tags.py
folioblog/core/fixtures/: basicpages.json  collections.json  embeds.json  images.json  locales.json  menu.json  menulink.json  pages.json  photographers.json  referenceindex.json  renditions.json  settings.json  sites.json  taggeditems.json  tags.json
folioblog/core/management/commands/: cleanorphanfiles.py  cleanorphantags.py  createadmin.py  fixtures.py  generaterenditions.py  loadcachepages.py  updatesite.py  updatesitemodels.py
folioblog/core/migrations/: 0001_initial.py  0002_dummytranslatable.py  0003_bootstraptranslatable.py  0004_translatable.py  0005_locale_english.py  0006_image_alt.py  0007_folioblogsettings_cookie_rss.py  0008_alter_menu_homepage.py  0009_menu_is_active_alter_folioblogsettings_cookie_banner_and_more.py  0009_menu_is_active_alter_folioimage_file_and_more.py  0010_alter_folioblogsettings_cookie_banner.py  0011_folioblogsettings_gallery_collection_and_more.py  0012_menu_site_photographer_site.py  0013_alter_folioblogsettings_cookie_banner_and_more.py  0014_alter_basicpagerelatedlink_related_page_and_more.py  0015_folioblogsettings_favicon.py  0016_folioblogsettings_image_404_and_more.py  0017_folioblogsettings_author_and_more.py  0018_menu_promopage.py  0019_alter_folioblogsettings_email.py
folioblog/core/providers/: __init__.py
folioblog/core/providers/folioblog/: __init__.py
folioblog/core/templates/core/: background.html  basic_page.html  cookies_banner.html  credits.html  figcaption.html  filter_dropdown.html  language_selector.html  (+6 more)
folioblog/core/templatetags/: folioblog.py
folioblog/core/utils/: __init__.py  fixtures.py  richtext.py  tests.py
folioblog/formats/fr/: formats.py
folioblog/gallery/: factories.py  models.py
folioblog/gallery/fixtures/: gallerypage.json
folioblog/gallery/migrations/: 0001_initial.py  0002_image_alt.py
folioblog/gallery/templatetags/: gallery.py
folioblog/home/: factories.py  models.py
folioblog/home/fixtures/: homepage.json
folioblog/home/migrations/: 0001_initial.py  0002_image_alt.py
folioblog/portfolio/: blocks.py  models.py
folioblog/portfolio/factories/: __init__.py  blocks.py  pages.py
folioblog/portfolio/migrations/: 0001_initial.py  0002_portfoliopage_team_active.py  0003_alter_portfoliopage_about_heading_and_more.py
folioblog/search/: factories.py  form.py  models.py  views.py
folioblog/search/fixtures/: searchindex.json
folioblog/search/migrations/: 0001_initial.py  0002_image_alt.py
folioblog/settings/: base.py  dev.py  local.py.dist  prod.py  test.py
folioblog/templates/: 404.html  500.html
folioblog/templates/agency/: base.html  footer.html  header.html  navbar.html
folioblog/templates/cleanblog/: base.html  footer.html  header.html  navbar.html  pager.html  password_required.html  spinner.html
folioblog/user/: factories.py  models.py
folioblog/user/migrations/: 0001_initial.py
folioblog/video/: factories.py  models.py  views.py  wagtail_hooks.py
folioblog/video/fixtures/: videocategories.json  videoindex.json  videopagerelatedlinks.json  videopages.json  videopagetags.json  videopromote.json  videopromotelink.json  videotags.json
folioblog/video/migrations/: 0001_initial.py  0002_dummytranslatable.py  0003_bootstraptranslatable.py  0004_translatable.py  0005_image_alt.py  0006_alter_videocategory_unique_together_and_more.py  0007_alter_videopagerelatedlink_related_page_and_more.py  0008_videopage_author.py  0009_alter_videopage_date.py
folioblog/video/templatetags/: video.py
media/maintenance/: index.html
media/maintenance/css/: styles.css
requirements/: dev.txt  prod.txt  test.txt
(+144 files in other folders)
