[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "folioblog"
version = "1.4.0"
description = "A PortFolio/Blog website build with the CMS Wagtail"
authors = ["Yannick Chabbert <yannick.chabbert.it@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.0.0"
django-social-share = "^2.3.0"
django-compressor = "^4.4"
redis = "^5.0.1"
hiredis = "^2.2.3"
psycopg = "^3.1.9"

[tool.poetry.group.test.dependencies]
isort = "^5.12.0"
tblib = "^2.0.0"
factory-boy = "^3.3.0"
wagtail-factories = "^4.1.0"
requests-mock = "^1.11.0"
selenium = "^4.10.0"
tox = "^4.6.4"
coverage = {extras = ["toml"], version = "^7.2.7"}
pylama = {extras = ["toml"], version = "^8.4.1"}
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.1.0"
pre-commit = "^3.5.0"

[tool.pylama]
skip = "*/.tox/*,*/migrations/*,*/settings/*,*/static/*"
linters = "pycodestyle,pyflakes,mccabe"

[tool.pylama.linter.pycodestyle]
max_line_length = 119

[tool.pylama.linter.mccabe]
complexity = 15

[tool.isort]
combine_as_imports = true
multi_line_output = 5
include_trailing_comma = true
skip = ".tox,migrations,docs,media,static"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_django = "django"
known_wagtail = "wagtail"
known_first_party = "folioblog"

[tool.coverage.run]
source = [ "folioblog" ]
branch = true
omit = [
    "manage.py",
    "folioblog/wsgi.py",
    "folioblog/core/compressor.py",
    "folioblog/settings/dev.py",
    "folioblog/settings/local.py",
    "folioblog/settings/prod.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "def __str__",
    "def __repr__",
]
