[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "folioblog"
version = "1.5.0"
description = "A PortFolio/Blog website build with the CMS Wagtail"
authors = ["Yannick Chabbert <yannick.chabbert.it@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.1.3"
django-social-share = "^2.3.0"
django-compressor = "^4.4"
redis = "^5.0.1"
hiredis = "^2.2.3"
psycopg = "^3.1.9"

[tool.poetry.group.test.dependencies]
tblib = "^2.0.0"
factory-boy = "^3.3.0"
wagtail-factories = "^4.1.0"
requests-mock = "^1.11.0"
selenium = "^4.10.0"
tox = "^4.6.4"
lxml = "^4.9.3"
coverage = {extras = ["toml"], version = "^7.2.7"}

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.1.0"
pre-commit = "^3.5.0"
pylama = {extras = ["toml"], version = "^8.4.1"}
black = "^23.9.1"
djhtml = "^3.0.6"
isort = "^5.12.0"

[tool.black]
line-lenght = 119
target-version = ["py310"]
extend-exclude = "/migrations/|/settings/"

[tool.pylama]
skip = "*/.tox/*,*/migrations/*,*/settings/*,*/static/*"
linters = "pycodestyle,pyflakes,mccabe"

[tool.pylama.linter.pycodestyle]
max_line_length = 119

[tool.pylama.linter.mccabe]
complexity = 15

[tool.isort]
profile = "black"
skip = "migrations"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_django = "django"
known_wagtail = "wagtail"
known_first_party = "folioblog"

[tool.coverage.run]
source = [ "folioblog" ]
branch = true
omit = [
    "manage.py",
    "folioblog/wsgi.py",
    "folioblog/core/compressor.py",
    "folioblog/settings/dev.py",
    "folioblog/settings/local.py",
    "folioblog/settings/prod.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "def __str__",
    "def __repr__",
]
